--"Update" list with the InfoPiggyback information used to update the membership lists of the components of the network is added to the Ping.java (content of the NetPing/NetPong messages). --The information dissemination works correctly in a scenario with OPEN addresses! (To add only open addresses, select EVEN IDs in the SwimScenario corresponding method for nodes initialization